# multimedia_multimedia_cangjie_wrapper

./: BUILD.gn  bundle.json
kit/AVSessionKit/: BUILD.gn  index.cj
kit/AudioKit/: BUILD.gn  index.cj
mock/: ohos.file.photo_access_helper.cj  ohos.multimedia.camera.cj  ohos.multimedia.cj  ohos.multimedia.image.cj  ohos.multimedia.media.cj
ohos/file/photo_access_helper/: BUILD.gn  album.cj  fetch_result.cj  media_album_change_request.cj  media_asset_change_request.cj  photo_accesshelper.cj  photo_accesshelper_ffi.cj  photo_accesshelper_utils.cj  photo_asset.cj  photo_view_picker.cj
ohos/multimedia/: BUILD.gn
ohos/multimedia/audio/: BUILD.gn  cj_audio_callback.cj  cj_audio_capturer.cj  cj_audio_enum.cj  cj_audio_manager.cj  cj_audio_util.cj  native.cj
ohos/multimedia/avsession/: BUILD.gn  av_metadata.cj  av_session_enum.cj  av_session_log.cj  avsession.cj  avsession_error_code.cj  avsession_manager.cj
ohos/multimedia/camera/: BUILD.gn  camera.cj  camera_ability.cj  camera_common.cj  camera_ffi.cj  camera_input.cj  camera_manager.cj  camera_output.cj  camera_session.cj  photo_output.cj  preview_output.cj  video_output.cj
ohos/multimedia/image/: BUILD.gn  cj_image_common.cj  cj_image_enum.cj  cj_image_utils.cj  image.cj  image_packer.cj  image_receiver.cj  image_source.cj  pixel_map.cj
ohos/multimedia/media/: BUILD.gn  avimage_generator.cj  avmetadata_extractor.cj  avrecorder.cj  media_common.cj  media_ffi.cj
test/camera/test/entry/src/main/cangjie/src/: Test_camera.cj
test/hide_multimedia/test/entry/src/main/cangjie/src/: Test_hide_multimedia.cj  test_list_hide_multimedia.cj
test/image/test/entry/src/main/cangjie/src/: Test_image.cj
test/media/: build.py
test/photo_accesshelper/test/: profile.json
test/photo_accesshelper/test/entry/src/main/cangjie/src/: Test_photoAccesshelper.cj
