# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/cangjie/cjc.gni")

multimedia_cangjie_wrapper_packages_ohos = [
    "//foundation/multimedia/multimedia_cangjie_wrapper/ohos/multimedia/camera:ohos.multimedia.camera",
    "//foundation/multimedia/multimedia_cangjie_wrapper/ohos/file/photo_access_helper:ohos.file.photo_access_helper",
    "//foundation/multimedia/multimedia_cangjie_wrapper/ohos/multimedia/avsession:ohos.multimedia.avsession",
    "//foundation/multimedia/multimedia_cangjie_wrapper/ohos/multimedia/media:ohos.multimedia.media",
    "//foundation/multimedia/multimedia_cangjie_wrapper/ohos/multimedia/image:ohos.multimedia.image",
    "//foundation/multimedia/multimedia_cangjie_wrapper/ohos/multimedia:ohos.multimedia"
]
multimedia_cangjie_wrapper_packages_kit = [
    "//foundation/multimedia/multimedia_cangjie_wrapper/kit/AVSessionKit:kit.AVSessionKit",
    "//foundation/multimedia/multimedia_cangjie_wrapper/kit/MediaKit:kit.MediaKit",
    "//foundation/multimedia/multimedia_cangjie_wrapper/kit/MediaLibraryKit:kit.MediaLibraryKit",
    "//foundation/multimedia/multimedia_cangjie_wrapper/kit/CameraKit:kit.CameraKit",
    "//foundation/multimedia/multimedia_cangjie_wrapper/kit/ImageKit:kit.ImageKit",
]
copy_ohos_cangjie_sdk_api_lib("copy_sdk_multimedia_cangjie_libs") {
  ohos_inputs = multimedia_cangjie_wrapper_packages_ohos
  kit_inputs = multimedia_cangjie_wrapper_packages_kit
}